--- a/style.css
+++ b/style.css
@@ -1,76 +1,3 @@
-
-/*=================media querise=============*/
-
-	.site{
-		grid-template-areas: 
-		"header header"
-		"sidebar sidebar"
-		"body body"
-		"footer footer"
-	}
-	.image{
-		display: none;
-	}
-	.grandtitre{
-		font-size: 1.5em;
-		margin-left: 0;
-	}
-	.formation{
-		display: flex;
-		flex-direction: column;
-	}
-	.dl{
-		margin-left: 30%;
-	}
-	.etude{
-		margin-left: 5%;
-	}
-	.archéo{
-		display: flex;
-		flex-direction: column;
-	}
-	.dl2{
-		margin-left: 30%;
-		width: 70%;
-	}
-	.etude2{
-		margin-top: 40%;
-		margin-left: -75%;
-	}
-	.auchan{
-		display: flex;
-		flex-direction: column;
-	}
-	.dl3{
-		margin-left: 30%;
-	}
-	.texte{
-		margin-left: -7%;
-	}
-	.pointvert{
-		display: flex;
-		flex-direction: column;
-	}
-	.dl4{
-		margin-left: 30%;
-	}
-	footer{
-		display: flex;
-		flex-direction: column-reverse;
-	}
-	#reco{
-		width: 90%;
-
-	}
-	#reco h4{
-		font-size: 1.4rem;
-	}
-	#reco p{
-		margin-left: -40%;
-	}
-	#loisir{
-		width: 100%;
-	}
 /*===========grille=============*/
 .site{
 	display: grid;
@@ -221,158 +148,79 @@ h4{
 }
 h5{
 	font-size: 1em;
-}	
-
-@media (min-width: 769px){
-	/*===========grille=============*/
-.site{
-	display: grid;
-	grid-template-rows: 10% 1fr 10%;
-	grid-template-columns: 2fr 5fr;
-	grid-template-areas: 
+}
+/*=================media querise=============*/
+@media screen and (min-device-width: 320px) and (max-device-width: 768px){
+	.site{
+		grid-template-areas: 
 		"header header"
-		"sidebar body"
+		"sidebar sidebar"
+		"body body"
 		"footer footer"
-}
-.header{
-	grid-area: header;
-	
-}
-.sidebar{
-	grid-area: sidebar;
-}
-.body{
-	grid-area: body;
-}
-.footer{
-	grid-area: footer;
-}
-.image{
-	grid-column: 1;
-	grid-row-start: 1;
-	border: 1px solid #42A5F5;
-	background-color: #42A5F5;
-}
-#loisir{
-	grid-column-start: 1;
-	grid-row-start: 3;
-	background-color:  #42A5F5;
-	width: 28.6%;
-}
-/*============================*/
-img{
-	transform: scale(0.5);
-	border-radius: 50%;
-	width: 100%;
+	}
+	.image{
+		display: none;
+	}
+	.grandtitre{
+		font-size: 1.5em;
+		margin-left: 0;
+	}
+	.formation{
+		display: flex;
+		flex-direction: column;
+	}
+	.dl{
+		margin-left: 30%;
+	}
+	.etude{
+		margin-left: 5%;
+	}
+	.archéo{
+		display: flex;
+		flex-direction: column;
+	}
+	.dl2{
+		margin-left: 30%;
+		width: 70%;
+	}
+	.etude2{
+		margin-top: 40%;
+		margin-left: -75%;
+	}
+	.auchan{
+		display: flex;
+		flex-direction: column;
+	}
+	.dl3{
+		margin-left: 30%;
+	}
+	.texte{
+		margin-left: -7%;
+	}
+	.pointvert{
+		display: flex;
+		flex-direction: column;
+	}
+	.dl4{
+		margin-left: 30%;
+	}
+	footer{
+		display: flex;
+		flex-direction: column-reverse;
+	}
+	#reco{
+		width: 90%;
 
-}
-.grandtitre{
-	margin-left: 40%;
-	font-size: 2.2em;
-}
-.prenom{
-	color: #42A5F5;
-}
-.metier{
-	text-decoration: underline #42A5F5;
-}
-.sidebar h3{
-	border: 2px solid #0D47A1;
-	font-size: 2em;
-	text-align: center;
-	background-color: #039BE5;
-}
-.sidebar p{
-	padding-left: 5%;
-	padding-right: 5%;
-	text-align: justify;
-}
-.formation{
-	display: flex;
-	flex-direction: row;
-}
-.dl{
-	margin-top: 2%;
+	}
+	#reco h4{
+		font-size: 1.4rem;
+	}
+	#reco p{
+		margin-left: -40%;
+	}
+	#loisir{
+		width: 100%;
+	}
 	
-}
-.etude{
-	margin-left: 17.5%;
-}
-.dl2{
-	margin-top: 2%;
-}
-.etude2{
-	margin-left: 15%;
-}
-.archeo{
-	display: flex;
-	flex-direction: row;
-}
-.texte{
-	padding-left: 15%;
-}
-.contact{
-	margin-bottom: 20%
-}
-.auchan{
-	display: flex;
-	flex-direction: row;
-}
-.dl3, .dl4{
-	margin-top: 1%;
-}
-.pointvert{
-	display: flex;
-	flex-direction: row;
-}
-footer{
-	display: flex;
-}
-#reco{
-	margin-left: 7%;
-	width: 50%
-}
-h4 i{
-	margin-right: 1.5rem;
-}
-.text3{
-	text-align: justify;
-	margin-left: 40%;
-}
-#loisir h3{
-	border: 2px solid #0D47A1;
-	font-size: 2em;
-	text-align: center;
-	background-color: #039BE5;
-}
-.sidebar{
-	background-color: #42A5F5;
-}
-.body{
-	margin-left: 10%;
-	text-align: justify;
-	margin-right: 5%;
-}
-.kiffe{
-	font-size: 1em;
-	padding: 2%;
-	margin-left: 15%;
-}
-.kiffe i{
-	border: 2px solid #0D47A1;
-	transform: (0.5);
-	border-radius: 100%;
-	padding: 5%
-}
-h4{
-	font-size: 1.5em;
-	border-bottom: 2px solid #0D47A1;
-	
-}
-.body i{
-	margin-right: 1.5em;
-}
-h5{
-	font-size: 1em;
-}
+
 }
