--- a/essai.css
+++ b/essai.css
@@ -24,15 +24,14 @@ p{
 	background-color: #00BCD4;
 }
 .kiffe{
-	width: 50%;
 	display: flex;
-	flex-direction: row;
-	margin-left: 6%; 
+	justify-content: space-around;
+	margin: 0; 
 }
 .kiffe i{
 	border: 1px solid #0D47A1;
 	border-radius: 100%;
-	padding: 10%;
+	padding: 5%;
 }
 h4{
 	border-bottom: 1px solid #0D47A1;
@@ -94,10 +93,7 @@ p{
 	margin-bottom: 20%;
 }
 #loisir{
-	margin-top: 200%;
-}
-.kiffe{
-	margin-left: 1%;
+	margin-top: 230%;
 }
 .formation{
 	display: grid;
@@ -145,9 +141,6 @@ p{
 		padding-left: 5%;
 	}
 	#loisir{
-		margin-top: 130%;
-	}
-	.kiffe{
-		margin-left: 15%;
+		margin-top: 170%;
 	}
 }
