--- a/essai.css
+++ b/essai.css
@@ -352,10 +352,6 @@ img{
 	border-radius: 100%;
 	width: 100%;
 }
-.sidebar, .wrapper, .header{
-	padding-left: 2%;
-	padding-right: 2%;
-}
 .image{
 	background-color: #00BCD4;
 }
@@ -370,8 +366,13 @@ h3{
 	text-align: center;
 	background-color: #0D47A1;
 }
+h1, h2, h4, h5{
+	padding-left: 2%;
+}
 p{
 	text-align: justify;
+	padding-left: 2%;
+	padding-right: 2%;
 }
 .sidebar{
 	background-color: #00BCD4;
@@ -404,11 +405,11 @@ h5{
 	display: flex;
 	justify-content: center;
 }
-.far{
-	float: left;
-	padding: 0;
-	margin: 0;
-	padding-bottom: 10%;
+.date{
+	margin-top: -10%;
+}
+.formation i{
+	visibility: hidden;
 }
 i{
 	font-size: 1.5rem;
@@ -438,10 +439,6 @@ i{
 	margin-left: 10%;
 	margin-right: 5%;
 }
-.sidebar, .wrapper, .header{
-	padding-left: 0;
-	padding-right: 0;
-}
 .image{
 	grid-column: 1;
 	grid-row-start: 1;
@@ -449,6 +446,7 @@ i{
 }
 h3, h4{
 	font-size: 1.3rem;
+	padding-left: 0;
 }
 p{
 	font-size: 1rem;
@@ -469,6 +467,9 @@ p{
 	grid-template-columns: 10% 30% 60%;
 	grid-template-rows: 30% 30%;
 	align-items: baseline;
+}
+.formation i{
+	visibility: visible;
 }
 .far{
 	grid-column: 1;
