--- a/essai.css
+++ b/essai.css
@@ -392,6 +392,7 @@ article{
 	border: 1px solid #0D47A1;
 	border-radius: 100%;
 	padding: 5%;
+    display: flex;
 }
 h4{
 	border-bottom: 1px solid #0D47A1;
