--- a/essai.css
+++ b/essai.css
@@ -386,12 +386,15 @@ article{
     display: flex;
     flex-direction: row;
     display: flex;
-     justify-content: space-around;
+    justify-content: space-around;
 }
 .ico{
 	border: 1px solid #0D47A1;
 	border-radius: 100%;
-	padding: 5%;
+	width: 60px;
+    height: 60px;
+    padding: 2%;
+    text-align: center;
 }
 h4{
 	border-bottom: 1px solid #0D47A1;
