--- a/essai.css
+++ b/essai.css
@@ -394,9 +394,9 @@ article{
 	width: 60px;
     height: 60px;
     padding: 5%;
-    text-align: center;
     align-items: center;
     display: flex;
+    justify-content: center;
 }
 h4{
 	border-bottom: 1px solid #0D47A1;
